[tool.poetry]
name = "devhub"
version = "0.1.0"
description = ""
authors = ["Sreeya Srikanth <sreeyasrikanth77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.120.1"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
